--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 <h1> Local2Wide</h1>
 <H2>Links Page for Radio Astronomy References</H2>
 
-<p><a href="RTLSDR.html"></a> For more infor on software defined radio</p>
+<p><a href="RTLSDR.html">RTLSDR</a> For more infor on software defined radio</p>
