--- a/RTLSDR.html
+++ b/RTLSDR.html
@@ -4,7 +4,7 @@
 
 <h2>RTLSDR</h2>
 
-<p><a href="https://www.gnuradio.org/"</a> is a link to a website on the World Wide Web.</p>
+<p><a href="https://www.gnuradio.org/"GUNRadio</a> is a link to a website on the World Wide Web.</p>
 
 </body>
 </html>
