--- a/RTLSDR.html
+++ b/RTLSDR.html
@@ -12,6 +12,7 @@
     </ul>
     <li><a href="https://wiki.gnuradio.org/index.php/Tutorials">Tutorials</a></li>
     <li><a href="https://github.com/gnuradio">GNURadio's github site</a></li>
+    <li><a href="https://wiki.gnuradio.org/index.php/SuggestedReading">Suggested Readings</a></li>
   </ul> 
 </p>
   
