--- a/RTLSDR.html
+++ b/RTLSDR.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2>RTLSDR</h2>
+<h2>Software Sefined Radio(SDR)</h2>
 
 <p><a href="https://www.gnuradio.org/">GUNRadio</a> is a free & open-source software development toolkit that provides signal processing blocks to implement software radios.
   <ul>
@@ -23,7 +23,7 @@
         <ul>
       <li><a href="https://github.com/osmocom/rtl-sdr">rtl-sdr software mirror</a></li>
           <ul>
-             <li><a href="https://osmocom.org/projects/rtl-sdr/wiki/Rtl-sdr">Wiki site</a></li>
+             <li><a href="https://osmocom.org/projects/rtl-sdr/wiki/Rtl-sdr">rtl-sdr wiki site</a></li>
           </ul>
       <li><a href="https://github.com/osmocom/gr-osmosdr">OsmoSDR block mirror</a></li>
           <ul>
