--- a/index.html
+++ b/index.html
@@ -3,4 +3,6 @@
 <H2>Links Page for Radio Astronomy References</H2>
 
 <p><a href="RTLSDR.html">RTLSDR</a> For more infor on software defined radio</p>
+<a href="other.html">Additional projects and information</a>
+<a href="rtlsdr.html">Page 2</a>
 <a href="rtlsdr.html">Page 2</a>
