--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
 <p><a href="RTLSDR.html">RTLSDR</a> For more infor on software defined radio</p>
 <p><a href="other.html">Additional projects and information</a><p>
 <p><a href="obsandorgs.html">Observatories and Organizations</a><p>
-<p><a href="pdfbooks.htl">Downloadable PDF Books</a><p>
+<p><a href="pdfbooks.htlm">Downloadable PDF Books</a><p>
