--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <h1> Local2Wide</h1>
 <H2>Links Page for Radio Astronomy References</H2>
 
-<p><a href="RTLSDR.html">RTLSDR</a> For more infor on software defined radio</p>
-<p><a href="other.html">Additional projects and information</a><p>
+<p><a href="RTLSDR.html">RTLSDR</a> Information on software defined radio</p>
 <p><a href="obsandorgs.html">Observatories and Organizations</a><p>
 <p><a href="pdfbooks.html">Downloadable PDF Books</a><p>
+<p><a href="other.html">Additional projects and information</a><p>
