--- a/obsandorgs.html
+++ b/obsandorgs.html
@@ -14,7 +14,17 @@
    <li><a href="http://www.radio-astronomy.org/grants">$200 teacher and/or student grant</a></li>
   </ul>
 <li><a href="https://public.nrao.edu/">National Radio Astronomy Observatory</a></li>
-</ul>
+ <li><a href="https://www.jpl.nasa.gov/">Jet Propulsion Laboratory</a></li>
+ <li><a href="http://www.stsci.edu">Space Telescope Science Institute</a> in Baltimore, Maryland, operated by the Association of Universities for Research in Astronomy.</li>
+ <li><a href="http://astro.u-strasbg.fr/~koppen/JKHome.html">Croeso i'r HomePage o Joachim Köppen</a></li>
+ <li><a href="https://opensourceradiotelescopes.org/">Open source radio telescopes</a></li>
+   <ul>
+    <li><a href="http://opensourceradiotelescopes.org/wk/index.php?title=Main_Page">OSRT wiki with projects</a></li>
+ </ul>
+ <li><a href="http://wvurail.org/dspira/">Digital Signal Processing in Radio Astronomy</a></li>
+ <li><a href="http://www.ccera.ca/about/">Canadian Centre for Experimental Radio Astronomy</a> Amateur group with hline data and software on github available</li>
+ 
+ </u
 </p>
 </body>
 </html>
