--- a/obsandorgs.html
+++ b/obsandorgs.html
@@ -23,8 +23,11 @@
  </ul>
  <li><a href="http://wvurail.org/dspira/">Digital Signal Processing in Radio Astronomy</a></li>
  <li><a href="http://www.ccera.ca/about/">Canadian Centre for Experimental Radio Astronomy</a> Amateur group with hline data and software on github available</li>
- 
- </u>
+ <li><a href="http://www.parkes.atnf.csiro.au/">Parkes 64m observatory</a></li>
+ <ul>
+  <li><a href="http://hipass.anu.edu.au/">Data access for HI Parkes All Sky Survey</a></li>
+ </ul>
+</ul>
 </p>
 </body>
 </html>
