--- a/obsandorgs.html
+++ b/obsandorgs.html
@@ -26,6 +26,7 @@
  <li><a href="http://www.parkes.atnf.csiro.au/">Parkes 64m observatory</a></li>
  <ul>
   <li><a href="http://hipass.anu.edu.au/">Data access for HI Parkes All Sky Survey</a></li>
+  <li><a href="https://www.atnf.csiro.au/research/GASS/index.html"> Galactic All Sky Survey(GASS)</a></li>
  </ul>
 </ul>
 </p>
