--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <H2>Links Page for Radio Astronomy References</H2>
 
 <h2><a href="https://public.nrao.edu/radio-astronomy/">Introduction to Radio Astronomy</a></h2>
+</a href="https://www.skatelescope.org/radio-astronomy/">Pictures of different frquencies</a>
 
 <p><a href="RTLSDR.html">RTLSDR</a> Information on software defined radio</p>
 <p><a href="obsandorgs.html">Observatories and Organizations</a><p>
