--- a/antennas.html
+++ b/antennas.html
@@ -6,6 +6,15 @@
 <body>
 
 <h1>Antenna-Theory</h1>
+ <ul>
+   
+  <ul>
+    <li><a href="https://www.tutorialspoint.com/antenna_theory/antenna_theory_fundamentals.htm">Simple antenna theory</a></li>
+    <li><a href="http://www.antenna-theory.com/">Advanced antenna theory</a></li>
+    <ul>
+      <li>Phd Dissertation <a href="http://www.antenna-theory.com/Bevelacqua-Dissertation.pdf">ANTENNA ARRAYS: PERFORMANCE LIMITS AND GEOMETRY OPTIMIZATION</a></li>
+    </ui>
+   </ul> 
 <h1>Antenna Builds</h1>
 
 </body>
