--- a/antennas.html
+++ b/antennas.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-<title>Antennas</title>
-</head>
+ <head>
+  <meta charset="utf-8">
+  <title>Antennas</title>
+ </head>
 <body>
 
 <h1>Antenna-Theory</h1>
