--- a/antennas.html
+++ b/antennas.html
@@ -1,9 +1,6 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
- <head>
-  <meta charset="utf-8">
   <title>Antennas</title>
- </head>
 <body>
 
 <h1>Antenna-Theory</h1>
