--- a/antennas.html
+++ b/antennas.html
@@ -14,6 +14,8 @@
     </ul>
    </ul> 
 <h1>Antenna Builds</h1>
+   <u1>
+     <li><a href="https://www.cfa.harvard.edu/~npatel/hornAntennaAASposterPDF2.pdf">A low-cost 21 cm horn-antenna radio telescope for education and outreach</a></li>
 
 </body>
 </html>
